--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,3 @@
 {
-    "sqltools.connections": [
-        {
-            "previewLimit": 50,
-            "server": "localhost",
-            "port": 5432,
-            "driver": "PostgreSQL",
-            "name": "con1",
-            "database": "mydatabase",
-            "username": "myuser",
-            "password": "mypassword"
-        }
-    ]
+    "sqltools.connections": []
 }
