--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "backend",
+  "name": "nodets",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.2.2"
+    "@types/express": "^4.17.21",
+    "@types/node": "^18.11.9",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "express": "^4.18.2"
