--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -2,7 +2,7 @@
 FROM postgres:16.0-bookworm
 
 # Set environment variables for PostgreSQL
-ENV POSTGRES_DB=mydatabase \
+ENV POSTGRES_DB=electiondb \
     POSTGRES_USER=myuser \
     POSTGRES_PASSWORD=mypassword
 
