--- a/backend/package.json
+++ b/backend/package.json
@@ -13,18 +13,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^18.18.13",
     "@types/pg": "^8.10.9",
+    "@types/uuid": "^9.0.8",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
+    "uuid": "^9.0.1"
   }
 }
